--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Btnet": {
+    "DbConnectionString": "Server=127.0.0.1;Database=corey_db;User Id=sa;Password=password;",
+    "SomeNumber": 123,
+    "AnotherThing": "another thing"
+  }
 }
