--- a/net_razor.csproj
+++ b/net_razor.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2"/>
+  </ItemGroup>
+
 </Project>
