--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,8 +8,9 @@
             "command": "dotnet",
             "type": "shell",
             "args": [
-                "watch",
-                "run",
+                "build",
+                //"watch",
+                //"run",
                 // Ask dotnet build to generate full paths for file names.
                 "/property:GenerateFullPaths=true",
                 // Do not generate summary otherwise it leads to duplicate errors in Problems panel
