--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [/*
         {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
@@ -23,12 +23,14 @@
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
             }
-        },
+        },*/
         {
+            // manually run "dotnet watch run" then attach to net_razor.dll
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach",
-            "processId": "${command:pickProcess}"
+            //"processId": "${command:pickProcess}"
+            "processName": "net_razor"
         }
     ]
 }
