--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,9 +8,12 @@
             "command": "dotnet",
             "type": "shell",
             "args": [
-                "build",
-                //"watch",
-                //"run",
+                // Use "build" when we want our breakpoints to work, but won't reload automatically
+                //"build", 
+                // Use watch, run when we want to reload automatically, but breakpoints won't work
+                
+                "watch",
+                "run",
                 // Ask dotnet build to generate full paths for file names.
                 "/property:GenerateFullPaths=true",
                 // Do not generate summary otherwise it leads to duplicate errors in Problems panel
