works with postgres

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Btnet": {
-    "DbConnectionString": "Server=127.0.0.1;Database=corey_db;User Id=sa;Password=password;",
+    "DbConnectionString": "server=127.0.0.1;database=corey_db;user id='postgres';password='password';",
     "SomeNumber": 123,
     "AnotherThing": "another thing"
   }
