--- a/net_razor.csproj
+++ b/net_razor.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="mailkit" Version="2.9.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
+    <PackageReference Include="npgsql" Version="5.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
