--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Btnet": {
-    "DbConnectionString": "server=127.0.0.1;database=corey_db;user id='postgres';password='password';",
+    "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
     "SomeNumber": 123,
     "AnotherThing": "another thing"
   }
