--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,6 @@
   "Btnet": {
     "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
     "SomeNumber": 123,
-    "AnotherThing": "another thing"
+    "AppName": "Budoco"
   }
 }
