--- a/appsettings.json
+++ b/appsettings.json
@@ -7,9 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Btnet": {
+  "Budoco": {
     "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
     "SomeNumber": 123,
-    "AppName": "Budoco"
+    "AppName": "Budoco",
+    "RowsPerPage": 8
   }
 }
