registration works, need reset

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,7 @@
     "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
     "SomeNumber": 123,
     "AppName": "Budoco",
-    "RowsPerPage": 8
+    "RowsPerPage": 8,
+    "AutoConfirmRegistration": true
   }
 }
