ready for password reset, query editing

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Budoco": {
+    "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
+    "AppName": "Budoco Dev",
+    "RowsPerPage": 4,
+    "AutoConfirmRegistration": true
   }
 }
