--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,9 +10,8 @@
   "AllowedHosts": "*",
   "Budoco": {
     "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
-    "SomeNumber": 123,
     "AppName": "Budoco",
-    "RowsPerPage": 8,
-    "AutoConfirmRegistration": true
+    "RowsPerPage": 30,
+    "AutoConfirmRegistration": false
   }
 }
