secrets are safer

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,15 @@
   },
   "AllowedHosts": "*",
   "Budoco": {
-    "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
+    "DbServer": "127.0.0.1",
+    "DbDatabase": "budoco",
+    "DbUser": "postgres",
+    "DbPasswordFile": "/~/budoco_db.txt",
+
     "AppName": "Budoco",
     "RowsPerPage": 30,
-    "AutoConfirmRegistration": false
+    "AutoConfirmRegistration": false,
+
+    "LogFolder": "/~/budoco_logs"
   }
 }
