--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,9 +8,10 @@
     }
   },
   "Budoco": {
-    "DbConnectionString": "server=127.0.0.1;database=budoco;user id='postgres';password='password';",
     "AppName": "Budoco Dev",
     "RowsPerPage": 4,
-    "AutoConfirmRegistration": true
+    "AutoConfirmRegistration": true,
+    "DbPasswordFile": "/home/corey/Dropbox/budoco_db.txt",
+    "LogFolder": "logs"
   }
 }
