register, etc all really works

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,9 +9,17 @@
   },
   "Budoco": {
     "AppName": "Budoco Dev",
+    "WebsiteUrlRootWithoutSlash": "http://127.0.0.1:5000",
     "RowsPerPage": 4,
-    "AutoConfirmRegistration": true,
     "DbPasswordFile": "/home/corey/Dropbox/budoco_db.txt",
-    "LogFolder": "logs"
+    "LogFolder": "logs",
+
+    "SmtpHost": "smtp.mail.yahoo.com",
+    "SmtpPort": 587,
+    "SmtpUser": "ctrager_smtp@yahoo.com",
+    "SmtpPasswordFile": "/home/corey/Dropbox/budoco_smtp.txt",
+
+    "DebugAutoConfirmRegistration": false,
+    "DebugSkipSendingEmails": false
   }
 }
