--- a/appsettings.json
+++ b/appsettings.json
@@ -12,12 +12,20 @@
     "DbServer": "127.0.0.1",
     "DbDatabase": "budoco",
     "DbUser": "postgres",
-    "DbPasswordFile": "/~/budoco_db.txt",
+    "DbPasswordFile": "budoco_db.txt",
 
     "AppName": "Budoco",
+    "WebsiteUrlRootWithoutSlash": "https://YOURDOMAIN.COM",
     "RowsPerPage": 30,
-    "AutoConfirmRegistration": false,
+  
+    "LogFolder": "budoco_logs",
 
-    "LogFolder": "/~/budoco_logs"
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 465,
+    "SmtpUser": "YOUR_GMAIL@gmail.com",
+    "SmtpPasswordFile": "budoco_smtp.txt",
+
+    "DebugAutoConfirmRegistration": false,
+    "DebugSkipSendingEmails": false
   }
 }
