--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -19,7 +19,7 @@
     "SmtpUser": "ctrager_smtp@yahoo.com",
     "SmtpPasswordFile": "/home/corey/Dropbox/budoco_smtp.txt",
 
-    "DebugAutoConfirmRegistration": false,
-    "DebugSkipSendingEmails": false
+    "DebugAutoConfirmRegistration": true,
+    "DebugSkipSendingEmails": true
   }
 }
