--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -19,6 +19,7 @@
     "SmtpUser": "ctrager_smtp@yahoo.com",
     "SmtpPasswordFile": "/home/corey/Dropbox/budoco_smtp.txt",
 
+    "DebugWhatEnvIsThis": "appsettings.Development.json",
     "DebugAutoConfirmRegistration": true,
     "DebugSkipSendingEmails": true
   }
