--- a/appsettings.json
+++ b/appsettings.json
@@ -25,6 +25,7 @@
     "SmtpUser": "YOUR_GMAIL@gmail.com",
     "SmtpPasswordFile": "budoco_smtp.txt",
 
+    "DebugWhatEnvIsThis": "appsettings.json",
     "DebugAutoConfirmRegistration": false,
     "DebugSkipSendingEmails": false
   }
