--- a/appsettings.json
+++ b/appsettings.json
@@ -9,24 +9,6 @@
   },
   "AllowedHosts": "*",
   "Budoco": {
-    "DbServer": "127.0.0.1",
-    "DbDatabase": "budoco",
-    "DbUser": "postgres",
-    "DbPasswordFile": "budoco_db.txt",
-
-    "AppName": "Budoco",
-    "WebsiteUrlRootWithoutSlash": "https://YOURDOMAIN.COM",
-    "RowsPerPage": 30,
-  
-    "LogFolder": "budoco_logs",
-
-    "SmtpHost": "smtp.gmail.com",
-    "SmtpPort": 465,
-    "SmtpUser": "YOUR_GMAIL@gmail.com",
-    "SmtpPasswordFile": "budoco_smtp.txt",
-
-    "DebugWhatEnvIsThis": "appsettings.json",
-    "DebugAutoConfirmRegistration": false,
-    "DebugSkipSendingEmails": false
+    "DebugWhatEnvIsThis": "appsettings.json"
   }
 }
