--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,19 +8,6 @@
     }
   },
   "Budoco": {
-    "AppName": "Budoco Dev",
-    "WebsiteUrlRootWithoutSlash": "http://127.0.0.1:5000",
-    "RowsPerPage": 30,
-    "DbPasswordFile": "/home/corey/Dropbox/budoco_db.txt",
-    "LogFolder": "logs",
-
-    "SmtpHost": "smtp.mail.yahoo.com",
-    "SmtpPort": 587,
-    "SmtpUser": "ctrager_smtp@yahoo.com",
-    "SmtpPasswordFile": "/home/corey/Dropbox/budoco_smtp.txt",
-
-    "DebugWhatEnvIsThis": "appsettings.Development.json",
-    "DebugAutoConfirmRegistration": true,
-    "DebugSkipSendingEmails": true
+    "DebugWhatEnvIsThis": "appsettings.json"
   }
 }
