Migrate "Reports" feature

--- a/budoco.csproj
+++ b/budoco.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="npgsql" Version="5.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
